tests/errors/buffertypedef_T117.pyx
ctypedef object[float] mybuffer

_ERRORS = u"""
1:23: Syntax error in ctypedef statement
"""
